--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chance": "^1.1.11",
     "mkdirp": "^3.0.1",
     "slug": "^8.2.3",
     "superagent": "^8.1.2"
