added filtering stream

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "chance": "^1.1.11",
+    "csv-parse": "^5.5.3",
     "mkdirp": "^3.0.1",
     "slug": "^8.2.3",
     "superagent": "^8.1.2"
