--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "csv-parse": "^5.5.3",
     "mkdirp": "^3.0.1",
     "slug": "^8.2.3",
+    "split": "^1.0.1",
     "superagent": "^8.1.2"
   }
 }
