--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chance": "^1.1.11",
     "csv-parse": "^5.5.3",
     "mkdirp": "^3.0.1",
+    "pumpify": "^2.0.1",
     "slug": "^8.2.3",
     "split": "^1.0.1",
     "superagent": "^8.1.2"
