done chapter7 added exercise 7.1 & 7.2

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pumpify": "^2.0.1",
     "slug": "^8.2.3",
     "split": "^1.0.1",
+    "sqlite3": "^5.1.7",
     "superagent": "^8.1.2"
   }
 }
