--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "chance": "^1.1.11",
     "csv-parse": "^5.5.3",
+    "ini": "^4.1.2",
+    "json-over-tcp-2": "^0.3.5",
     "level": "^8.0.1",
     "mkdirp": "^3.0.1",
+    "object-path": "^0.11.8",
     "pumpify": "^2.0.1",
     "slug": "^8.2.3",
     "split": "^1.0.1",
