--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "slug": "^8.2.3",
     "split": "^1.0.1",
     "sqlite3": "^5.1.7",
-    "superagent": "^8.1.2"
+    "superagent": "^8.1.2",
+    "zeromq": "^6.0.0-beta.19"
   }
 }
