--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "autocannon": "^7.15.0",
     "chance": "^1.1.11",
+    "consul": "^1.2.0",
     "csv-parse": "^5.5.3",
+    "http-proxy": "^1.18.1",
     "ini": "^4.1.2",
     "json-over-tcp-2": "^0.3.5",
     "level": "^8.0.1",
     "mkdirp": "^3.0.1",
+    "nanoid": "^5.0.6",
     "object-path": "^0.11.8",
+    "portfinder": "^1.0.32",
     "pumpify": "^2.0.1",
     "slug": "^8.2.3",
     "split": "^1.0.1",
